kubeconfig builder package
Signed-off-by: Richard Wall <richard.wall@jetstack.io>

--- a/cmd/kubeadm/app/util/kubeconfig/BUILD
+++ b/cmd/kubeadm/app/util/kubeconfig/BUILD
@@ -34,6 +34,9 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//cmd/kubeadm/app/util/kubeconfig/builder:all-srcs",
+    ],
     tags = ["automanaged"],
 )
